Fixed issue where tooltip shows when power options are invisible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,10 +285,6 @@ input[type="submit"]:hover {
   background-color: #FF344C;
 }
 
-[tooltip] {
-  display: none;
-}
-
 #tooltip-box {
   position: fixed;
   background: #3A3A3A;
